--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+  <h1 id="titulo">Tabla de Acciones</h1>
     
     <!-- 1 me hago la tabla -->
   <div class="content_table">
@@ -22,9 +24,12 @@
         <tbody id="tabla">
         </tbody>
       </table>
-  </div>    
+  </div> 
+
+  <div class="btns">   
       <button id="btn1">Mayor</button>
       <button id="btn2">Menor</button>
+  </div>    
   
 
 <!-- CREACION DE LA TABLA POR JS -->
