--- a/html/index.html
+++ b/html/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Primer Proyecto</title>
-    
-</head>
+  </head>
 
-<body>
+  <body>
+    <h1 id="titulo">Tabla de Acciones</h1>
 
-  <h1 id="titulo">Tabla de Acciones</h1>
-    
     <!-- 1 me hago la tabla -->
-  <div class="content_table">
-    <table id="content">
+    <div class="content_table">
+      <table id="content">
         <tr>
           <th>Nombre de la Acción</th>
           <th>Precio Anterior</th>
           <th>Precio Actual</th>
           <th>% Cambio</th>
         </tr>
-        <tbody id="tabla">
-        </tbody>
+        <tbody id="tabla"></tbody>
       </table>
-  </div> 
+    </div>
 
-  <div class="btns">   
+    <div class="btns">
       <button id="btn1">Mayor</button>
       <button id="btn2">Menor</button>
-  </div>    
-  
+    </div>
 
-<!-- CREACION DE LA TABLA POR JS -->
-<!--       <table>
+    <!-- CREACION DE LA TABLA POR JS -->
+    <!--       <table>
         <thead>
           <tr>
             <th>Nombre de la Acción</th>
@@ -46,7 +42,6 @@
         </tbody>
       </table> -->
 
-
     <script src="/js/script.js"></script>
-</body>
+  </body>
 </html>
