--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,11 @@
           <th>Nombre de la Acción</th>
           <th>Precio Anterior</th>
           <th>Precio Actual</th>
-          <th>% Cambio</th>
+          <th>
+            % Cambio
+            <button id="btn1">&#x25B2;</button>
+            <button id="btn2">&#x25BC;</button>
+          </th>
         </tr>
         <tbody id="tabla"></tbody>
       </table>
